tests/baselines/reference/iterableArrayPattern28.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern28.ts(1,33): error TS2501: A rest element cannot contain a binding pattern.
tests/cases/conformance/es6/destructuring/iterableArrayPattern28.ts(2,32): error TS2345: Argument of type '[["", 0], ["hello", true]]' is not assignable to parameter of type 'Iterable<["" | "hello", 0]>'.
  Types of property '[Symbol.iterator]' are incompatible.
    Type '() => IterableIterator<["", 0] | ["hello", true]>' is not assignable to type '() => Iterator<["" | "hello", 0]>'.
      Type 'IterableIterator<["", 0] | ["hello", true]>' is not assignable to type 'Iterator<["" | "hello", 0]>'.
        Types of property 'next' are incompatible.
          Type '(value?: any) => IteratorResult<["", 0] | ["hello", true]>' is not assignable to type '(value?: any) => IteratorResult<["" | "hello", 0]>'.
            Type 'IteratorResult<["", 0] | ["hello", true]>' is not assignable to type 'IteratorResult<["" | "hello", 0]>'.
              Type '["", 0] | ["hello", true]' is not assignable to type '["" | "hello", 0]'.
                Type '["hello", true]' is not assignable to type '["" | "hello", 0]'.
                  Type 'true' is not assignable to type '0'.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern28.ts (2 errors) ====
    function takeFirstTwoEntries(...[[k1, v1], [k2, v2]]: [string, number][]) { }
                                    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2501: A rest element cannot contain a binding pattern.
    takeFirstTwoEntries(...new Map([["", 0], ["hello", true]]));
                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '[["", 0], ["hello", true]]' is not assignable to parameter of type 'Iterable<["" | "hello", 0]>'.
!!! error TS2345:   Types of property '[Symbol.iterator]' are incompatible.
!!! error TS2345:     Type '() => IterableIterator<["", 0] | ["hello", true]>' is not assignable to type '() => Iterator<["" | "hello", 0]>'.
!!! error TS2345:       Type 'IterableIterator<["", 0] | ["hello", true]>' is not assignable to type 'Iterator<["" | "hello", 0]>'.
!!! error TS2345:         Types of property 'next' are incompatible.
!!! error TS2345:           Type '(value?: any) => IteratorResult<["", 0] | ["hello", true]>' is not assignable to type '(value?: any) => IteratorResult<["" | "hello", 0]>'.
!!! error TS2345:             Type 'IteratorResult<["", 0] | ["hello", true]>' is not assignable to type 'IteratorResult<["" | "hello", 0]>'.
!!! error TS2345:               Type '["", 0] | ["hello", true]' is not assignable to type '["" | "hello", 0]'.
!!! error TS2345:                 Type '["hello", true]' is not assignable to type '["" | "hello", 0]'.
!!! error TS2345:                   Type 'true' is not assignable to type '0'.